version/0.16/_sources/api/solver/_autosummary/settings/point_surface.rst.txt
:orphan:

.. _point_surface:

point_surface
=============

.. autoclass:: ansys.fluent.core.solver.settings_232.point_surface.point_surface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`point_surface_child <point_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_3>`       'surfaces' child.

============================   =====================

